<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/while_count_message_input"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/input_while_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_margin="5dp"
                    android:text="@string/first_while_test_result_label_text"
                    android:id="@+id/first_while_test_result_label"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:id="@+id/first_while_test_result"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/second_while_test_result_label_text"
                    android:layout_margin="5dp"
                    android:id="@+id/second_while_test_result_label"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:id="@+id/second_while_test_result"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/third_while_test_result_label_text"
                    android:layout_margin="5dp"
                    android:id="@+id/third_while_test_result_label"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:id="@+id/third_while_test_result"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:text="@string/average_while_test_result_label_text"
                   android:layout_margin="5dp"
                   android:id="@+id/arithmetic_main_label"
                   android:layout_width="wrap_content"
                   android:fontFamily="sans-serif-medium"
                   android:textSize="18sp"
                   android:layout_height="wrap_content" />
               <TextView
                   android:layout_margin="5dp"
                   android:id="@+id/arithmetic_main"
                   android:layout_width="match_parent"
                   android:fontFamily="sans-serif-medium"
                   android:textSize="18sp"
                   android:layout_height="wrap_content" />
           </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/uncompress_files_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="onStartTestClick"
            android:layout_margin="5dp"
            android:text="@string/start_uncompressing_files_btn"/>
    </LinearLayout>
</RelativeLayout>