<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:text="Insert records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Update records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Delete records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/first_while_test_result_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/first_while_test_result_label_text"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/first_compressing_test_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/second_while_test_result_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/second_while_test_result_label_text"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/second_compressing_test_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/third_while_test_result_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/third_while_test_result_label_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/third_compressing_test_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/arithmetic_main_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/average_while_test_result_label_text"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/arithmetic_main_compressing_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</TableLayout>